# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2025 Ned Konz for Metamagix
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-grove-vision-ai-v2"
description = "CircuitPython support for Seeed Studio's Grove Vision AI V2 board"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Ned Konz", email = "ned@metamagix.tech"}
]
urls = {Homepage = "https://github.com/bikeNomad/CircuitPython_grove_vision_ai_v2"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "grove_vision_ai_v2",
    "ai",
    "tflite",
    "seeedstudio",
    "xiao",
    "vision",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["grove_vision_ai_v2"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
